--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,19 @@ html, body {
     text-align: center;
     display: inline-block;
     font-family: monospace;
+    position: relative;
+    z-index: 5;
 }
 .navBar ul {
     padding: 0px;
 }
 .navBarDiv ul li {
     display: inline;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 50px;
     font-size: 18px;
+    background-color: #111111;
+    border-bottom: 13px solid #111111;
+    border-top: 46px solid #111111;
 }
 .navBarDiv ul li a {
     text-decoration: none;
@@ -32,9 +36,7 @@ html, body {
 }
 .headerLogo {
     height: 50px;
-    position: absolute;
-    margin-top: -15px;
-    left: 310px;
+    padding-right: 25px;
 }
 
 /* --------------- Drop Downs --------------- */
@@ -42,24 +44,33 @@ html, body {
 .dropDown:hover li a {
     color: #0094FF;
 }
+.dropDown li {
+    position: relative;
+    z-index: 5;
+}
 .dropDown {
     display: inline-block;
     height: 100%;
     margin-top: -15px;
     margin-bottom: -15px;
     padding: 15px;
+    z-index: 5;
 }
 .dropDown .dropDownContent {
-    display: none;
-    margin-top: 13px;
+    display: block;
+    margin-top: -150px;
+    opacity: 0;
+    overflow-y: hidden;
+    height: auto;
     position: absolute;
     margin-left: 25px;
     background-color: #222222;
     min-width: 150px;
     text-align: left;
+    border-top: 5px solid #0094FF;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    border-top: 5px solid #0094FF;
+    transition: margin .5s, opacity .5s linear .1s;
 }
 .dropDownContent a {
     color: white;
@@ -71,7 +82,8 @@ html, body {
     background-color: #333333;
 }
 .dropDown:hover .dropDownContent {
-    display: block;
+    margin-top: 13px;
+    opacity: 1;
 }
 
 /* --------------- Body --------------- */
@@ -100,6 +112,56 @@ html, body {
     display: block;
     margin-top: 25px;
     margin-bottom: 25px;
+}
+
+/* --------------- Contact Form --------------- */
+
+.contactForm {
+    margin: auto;
+    width: 400px;
+    padding: 25px;
+    border: 5px solid #0094FF;
+    background-color: #111111;
+    color: white;
+    font-family: monospace;
+}
+.contactForm div + div {
+    margin-top: 10px;
+}
+.contactForm div label {
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+    vertical-align: top;
+}
+input, textarea {
+    font: 1em sans-serif;
+    width: 300px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid #999;
+}
+input:focus, textarea:focus {
+    border-color: #000;
+}
+input:focus, textarea:focus {
+    border-color: #000;
+}
+.button {
+    padding-left: 90px;
+}
+button {
+    margin-left: .5em;
+    padding: 3px;
+    border: none;
+    background-color: #0094FF;
+    color: white;
+    font-family: monospace;
+    transition: background-color .5s;
+}
+button:hover {
+    background-color: #004A7F;
+    color: white;
 }
 
 /* --------------- This Page --------------- */
