--- a/styles.css
+++ b/styles.css
@@ -86,9 +86,23 @@ html, body {
     opacity: 1;
 }
 
-/* --------------- Body --------------- */
+/* --------------- Button ---------------*/
 
-/* --------------- Every Page --------------- */
+button {
+    margin-left: .5em;
+    padding: 3px;
+    border: none;
+    background-color: #0094FF;
+    color: white;
+    font-family: monospace;
+    transition: background-color .5s;
+}
+button:hover {
+    background-color: #004A7F;
+    color: white;
+}
+
+/* --------------- Body --------------- */
 
 .coloredLeftLine {
     color: #0094FF;
@@ -112,74 +126,4 @@ html, body {
     display: block;
     margin-top: 25px;
     margin-bottom: 25px;
-}
-
-/* --------------- Contact Form --------------- */
-
-.contactForm {
-    margin: auto;
-    width: 400px;
-    padding: 25px;
-    border: 5px solid #0094FF;
-    background-color: #111111;
-    color: white;
-    font-family: monospace;
-}
-.contactForm div + div {
-    margin-top: 10px;
-}
-.contactForm div label {
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-    vertical-align: top;
-}
-input, textarea {
-    font: 1em sans-serif;
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #999;
-}
-input:focus, textarea:focus {
-    border-color: #000;
-}
-input:focus, textarea:focus {
-    border-color: #000;
-}
-.button {
-    padding-left: 90px;
-}
-button {
-    margin-left: .5em;
-    padding: 3px;
-    border: none;
-    background-color: #0094FF;
-    color: white;
-    font-family: monospace;
-    transition: background-color .5s;
-}
-button:hover {
-    background-color: #004A7F;
-    color: white;
-}
-
-/* --------------- This Page --------------- */
-
-.homePageCaption {
-    width: 500px;
-    position: absolute;
-    top: 150px;
-    left: 100px;
-    border-left: 5px solid #0094FF;
-    background-color: rgba(17, 17, 17, .75);
-    color: white;
-    padding: 25px;
-}
-.homePageCaption h2 {
-    font-family: monospace;
-}
-.homePageCaption p {
-    font-family: sans-serif;
-    line-height: 1.5;
 }
