--- a/contact-form.css
+++ b/contact-form.css
@@ -1,16 +1,27 @@
 /* --------------- Contact Form --------------- */
 
-.contactForm {
+.contactPageDiv {
     margin: auto;
+    width: 1000px;
+}
+.contactForm {
     width: 400px;
-    padding: 25px;
+    padding: 50px;
     border: 5px solid #0094FF;
     background-color: #111111;
     color: white;
     font-family: monospace;
 }
+.form2 {
+    border: 5px solid #0094FF;
+    background-color: #111111;
+    padding: 50px;
+    height: 185px;
+    font-family: monospace;
+    color: white;
+}
 .contactForm div + div {
-    margin-top: 10px;
+    margin-top: 25px;
 }
 .contactForm div label {
     display: inline-block;
@@ -33,4 +44,12 @@ input:focus, textarea:focus {
 }
 .button {
     padding-left: 90px;
+}
+.textAlignCenter {
+    text-align: center;
+    margin-bottom: 25px;
+}
+.floatLeft {
+    float: left;
+    margin: 50px;
 }
