--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,15 @@ button:hover {
     margin-top: 25px;
     margin-bottom: 25px;
 }
+a {
+    color: #0094FF;
+    text-decoration: none;
+}
+a:hover {
+    color: #004A7F;
+}
+h2 {
+    color: #111111;
+    font-family: monospace;
+    font-size: 2em;
+}
